[gd_scene load_steps=13 format=3 uid="uid://c3yw0qajh73o6"]

[ext_resource type="PackedScene" uid="uid://dd6j5ui72gw26" path="res://tl_control_buttons.tscn" id="1_55bhi"]
[ext_resource type="PackedScene" uid="uid://crwehviweekcw" path="res://tl.tscn" id="1_62tkp"]
[ext_resource type="Script" path="res://main.gd" id="1_p84kj"]
[ext_resource type="PackedScene" uid="uid://b35lhj5ogfsbj" path="res://frame.tscn" id="2_bkcg2"]
[ext_resource type="PackedScene" uid="uid://kn5qfqal1dad" path="res://music_player.tscn" id="2_pr7rh"]
[ext_resource type="PackedScene" uid="uid://ds1rljx56t256" path="res://outils.tscn" id="5_ocygp"]
[ext_resource type="PackedScene" uid="uid://b36cavvikqclg" path="res://export.tscn" id="6_vsto7"]
[ext_resource type="PackedScene" uid="uid://dscxingejyvg0" path="res://thx_screen.tscn" id="7_exwyy"]
[ext_resource type="PackedScene" uid="uid://dl6jkrdbuso3k" path="res://live.tscn" id="7_w30rq"]
[ext_resource type="PackedScene" uid="uid://c1ccxbmqe374w" path="res://file_browser.tscn" id="9_c5ttq"]
[ext_resource type="PackedScene" uid="uid://kl3kppw5qg3g" path="res://output.tscn" id="10_sig8e"]
[ext_resource type="PackedScene" uid="uid://bt82mmo6nrgs" path="res://mixette.tscn" id="11_6vtoa"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p84kj")
metadata/_edit_horizontal_guides_ = [-548.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="music_player" parent="MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("2_pr7rh")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TL_margin" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TL_margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TL" parent="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer" instance=ExtResource("1_62tkp")]
layout_mode = 2
size_flags_horizontal = 1

[node name="TL_control_buttons" parent="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer" instance=ExtResource("1_55bhi")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Frame_margin" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Frame" parent="MarginContainer/VBoxContainer/HBoxContainer/Frame_margin" instance=ExtResource("2_bkcg2")]
layout_mode = 2
pix_margin = 1.3

[node name="Tools_margin" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "ENSAD_LED Editor V0.2.2 test build
kown issues :
- Timeline Scroll barre peut se comporter bizarrement
- Lorsque qu'une  Frame est supprimée, aucune autre n'est séléctionnée, si l'utilisateur tente une modification sans en avoir séléctionné une autre, le logiciel crash
- La grille sur la frame centrale peut ne pas être régulière, puisqu'elle est un Shader fonctionnant en UV coordinate et non en pixel dur. Obligatoire pour gérer les input de manière fiable (le problème est rélgé pour les frame de prévisualisation de la timeline, puis que celle-ci ne prennet pas d'input par pixel)

Features A venir : 
- Ajout d'une color palette (au nombre de slot défini et fix)
- Ajout des boutons outils Pencil et Bucket (en attendant, clique ddroit permet de passer de l'un à l'autre)
- Ajout du bouton Send (Partie réseau du réseau à voir)

GUI finetuning :
- Passage à une Font Pixel Art
- Changer les boutons back, forward, play, frame +, et frame - , (actuellement png) en ColorRect + shader pour les garder crisp quelque soit la résolution
- Lorsque Hovered, changer le zoom par une inversion de couleur pour les boutons de contrôle de la timeline, à l'instar des boutons suppression de frame
- Ajouter les icones de main bleu contextuelle pour les action Pencil et Bucket
- Changer le Shader de la grille de couleur pour y faire figurer les gris  (dégradé du blanc au noir depuis le centre)
- Ajouter un icône de logiciel (qui sera afficher dans la barre d'onglet du navigateur )"
autowrap_mode = 2
justification_flags = 161

[node name="Outils" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer" instance=ExtResource("5_ocygp")]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 30

[node name="Live" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer/MarginContainer" instance=ExtResource("7_w30rq")]
layout_mode = 2
size_flags_vertical = 3

[node name="Export" parent="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer" instance=ExtResource("6_vsto7")]
layout_mode = 2
size_flags_stretch_ratio = 0.13

[node name="Thx_screen" parent="." instance=ExtResource("7_exwyy")]
visible = false
layout_mode = 1

[node name="file_browser" parent="." instance=ExtResource("9_c5ttq")]
visible = false
custom_minimum_size = Vector2(960, 720)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
target_size = Vector2(960, 620)

[node name="Output_Screen" type="Window" parent="."]
disable_3d = true
canvas_item_default_texture_filter = 0
gui_disable_input = true
title = "Output"
position = Vector2i(20, 900)
size = Vector2i(600, 500)
unresizable = true
borderless = true
content_scale_size = Vector2i(10, 3)
content_scale_mode = 2

[node name="Output" parent="Output_Screen" instance=ExtResource("10_sig8e")]

[node name="Mix_Screen" type="Window" parent="."]
title = "Mixette"
position = Vector2i(0, 36)
size = Vector2i(800, 600)

[node name="Mixette" parent="Mix_Screen" instance=ExtResource("11_6vtoa")]

[connection signal="resized" from="MarginContainer" to="." method="_on_main_margin_container_resized"]
[connection signal="changed_selected_frame" from="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer/TL" to="." method="_on_tl_changed_selected_frame"]
[connection signal="signal_frame_deleted" from="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer/TL" to="." method="_on_tl_frame_deleted"]
[connection signal="tl_clearing" from="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer/TL" to="." method="_on_tl_tl_clearing"]
[connection signal="update_ghost" from="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer/TL" to="." method="_on_tl_update_ghost"]
[connection signal="tl_input" from="MarginContainer/VBoxContainer/HBoxContainer/TL_margin/VBoxContainer/TL_control_buttons" to="." method="_on_tl_control_buttons_tl_input"]
[connection signal="new_input_start" from="MarginContainer/VBoxContainer/HBoxContainer/Frame_margin/Frame" to="." method="_on_frame_new_input_start"]
[connection signal="pixel_clicked" from="MarginContainer/VBoxContainer/HBoxContainer/Frame_margin/Frame" to="." method="_on_frame_pixel_clicked"]
[connection signal="tool_selected" from="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer/Outils" to="." method="_on_outils_tool_selected"]
[connection signal="export" from="MarginContainer/VBoxContainer/HBoxContainer/Tools_margin/VBoxContainer/Export" to="." method="_on_export_export"]
[connection signal="import_dir_selected" from="file_browser" to="." method="_on_file_browser_import_dir_selected"]
[connection signal="play" from="Mix_Screen/Mixette" to="Output_Screen/Output" method="_on_play_stop_input"]
[connection signal="shader_value_change" from="Mix_Screen/Mixette" to="Output_Screen/Output" method="set_shader_parameter"]
[connection signal="tl_input" from="Mix_Screen/Mixette" to="Output_Screen/Output" method="_on_tl_input"]
